# synapseui

./: .gitignore  .gitmodules  CLAUDE.md  README.md  dev.sh  stream_demo.py
backend/: main.py  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AddNodeButton.tsx  ConfigsSidebar.tsx  DeviceDropdown.tsx  DeviceHint.tsx  DevicesSidebar.tsx  NodeContextMenu.tsx  NodeEditor.tsx  OnboardingOverlay.tsx  ParameterPanel.tsx  StreamHint.tsx  StreamPanel.tsx
frontend/src/components/stream/: FFTView.tsx  HeatmapView.tsx  StreamEmptyState.tsx  TextLog.tsx  WaveformView.tsx
frontend/src/components/ui/: button.tsx
frontend/src/hooks/: useDevices.ts
frontend/src/lib/: fft.ts  ringBuffer.ts  serialize.ts  status.ts
frontend/src/nodes/: BaseNode.tsx  index.ts  types.ts
frontend/src/store/: useConfigStore.ts  useDeviceStore.ts  useGraphStore.ts
