[project]
name = "synapseui-backend"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "science-synapse",
]

[tool.uv.sources]
science-synapse = { git = "https://github.com/louislva/synapse-python.git", branch = "simulator-bugfixes-https" }

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
