[project]
name = "synapseui-backend"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "science-synapse",
]

[tool.uv.sources]
science-synapse = { path = "../synapse-python", editable = true }

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
